# HashTable

./: .gitignore  CMakeLists.txt  CachegrindDumpV0.txt  CachegrindDumpV1.txt  CachegrindDumpV2.txt  Clean.sh  README.md  TaskSolver.sh
CachegrindDumps/: CachegrindDumpV3.txt  CachegrindDumpV4.txt
ChainHashTable/: CMakeLists.txt
ChainHashTable/HashTableBenchmark/: CMakeLists.txt
ChainHashTable/HashTableBenchmark/TextFileHandler/: FileHandler.hpp  FileHandlerSpecializations.hpp
ChainHashTable/HashTableBenchmark/inc/: HashTableBenchmark.hpp
ChainHashTable/HashTableBenchmark/src/: HashTableBenchmark.cpp  main.cpp
ChainHashTable/LinkedList/Custom-asserts/: custom_asserts.h
ChainHashTable/LinkedList/Custom-asserts/Color-printf/: color_printf.cpp
ChainHashTable/LinkedList/inc/: llist.h  llistErrors.h
ChainHashTable/LinkedList/src/: llist.cpp  llistDump.cpp
ChainHashTable/TestingSystem/: CMakeLists.txt
ChainHashTable/TestingSystem/TextFileHandler/: FileHandlerDefinitions.hpp  FileHandlerSpecializations.hpp
ChainHashTable/TestingSystem/inc/: TestingSystem.hpp
ChainHashTable/TestingSystem/src/: TestingSystem.cpp  main.cpp
ChainHashTable/UnitTests/: Reference.py  UnitTests.py
ChainHashTable/inc/: ChainHashTable.hpp
ChainHashTable/src/: ChainHashTable.cpp  main.cpp
HashFunctions/: CMakeLists.txt
HashFunctions/src/: StringHash.cpp
HashFunctionsComparing/: CMakeLists.txt  CleanComparing.sh  StartComparing.sh  main.cpp
HashFunctionsComparing/HashFuncitons/: CMakeLists.txt
HashFunctionsComparing/HashFuncitons/inc/: StringHash.hpp
HashFunctionsComparing/HashFuncitons/src/: StringHash.cpp
HashFunctionsComparing/HashFunctionsBenchmark/: CMakeLists.txt
HashFunctionsComparing/HashFunctionsBenchmark/inc/: HashFunctionsBenchmark.hpp
HashFunctionsComparing/HashFunctionsBenchmark/src/: HashFunctionsBenchmark.cpp
HashFunctionsComparing/Plot/: PlotBuilder.py
HashFunctionsComparing/Scripts/: CleanComparing.sh  StartComparing.sh
HashFunctionsComparing/TestingSystem/: CMakeLists.txt  GenerateComparingTests.sh  StringTestsGenerator.py
HashFunctionsComparing/TestingSystem/TestGen/: StringTestsGenerator.py
HashFunctionsComparing/TestingSystem/inc/: HashFunctionTest.hpp  Tests.hpp
HashFunctionsComparing/TestingSystem/src/: HashFunctionTest.cpp  Tests.cpp
HashFunctionsComparing/TestsGenerator/: CrimeAndPunishment.txt  StringTestsGenerator.py
HashFunctionsComparing/TestsResults/: Crc32HashIntrinsicsResults.txt  Crc32HashOptimizedResults.txt  Crc32HashResults.txt  PolynomialHashResults.txt  SumHashResults.txt
HashFunctionsComparing/src/: main.cpp
HashTable/: CMakeLists.txt
HashTable/HashTables/: CMakeLists.txt
HashTable/HashTables/src/: ChainHashTable.cpp
HashTable/LinkedList/Custom-asserts/: custom_asserts.h
HashTable/LinkedList/inc/: llist.h
HashTable/inc/: ChainHashTable.hpp
HashTable/src/: ChainHashTable.cpp  TestingSystem.cpp
HashTablesComparing/: CleanHashTesting.sh  StartHashTesting.sh
HashTablesComparing/HashTables/LinkedList/: CMakeLists.txt
HashTablesComparing/HashTables/LinkedList/Color-printf/: CMakeLists.txt  color_printf.h
HashTablesComparing/HashTables/LinkedList/Custom-asserts/: .gitmodules  CMakeLists.txt
HashTablesComparing/HashTables/LinkedList/src/: llist.cpp
HashTablesComparing/HashTables/inc/: ChainHashTable.hpp
HashTablesComparing/inc/: TestingSystem.hpp
HashTablesComparing/src/: main.cpp
Scripts/: Clean.sh  CompareHashFunctions.sh  RunAllTests.sh  RunUnitTests.sh
